tdf#126414: MSForms: fix flickering of date field button on Windows

Need to ignore empty paint area parameters.

Change-Id: I195d7bf9b3914199984f4a732d7616520d51dbba